2012-09-06  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* synctex_main.c: Define snprintf and getcwd for WIN32.

2012-07-30  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* synctex_main.c (TEST): Check values returned by snprintf().

2012-06-30  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* synctex.c: Remove "# warning ..." line, because MSVC fails to
	interpret it.
	From Akira Kakuto <kakuto@fuk.kindai.ac.jp> (W32TeX).

2012-05-16  Vladimir Volovich  <vvv@vsu.ru>

	* synctex_parser.c (SYNCTEX_DECLARE_CHARINDEX): Bug fix, avoid
	isolated semicolon.

2012-02-03  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* synctex_parser.c: Change struct __synctex_updater_t member
	file from 'void *' to 'gzFile', they differ for zlib-1.2.6.

2011-10-18  Akira Kakuto   <kakuto@fuk.kindai.ac.jp>

	* synctex_parser.c: remove "# warning ..." lines, because MSVC fails to
	interpret them.

2011-10-14  Jérôme Laurens  <jerome.laurens@u-bourgogne.fr>

    These changes only affect the synctex command line utility
    as well as 3rd parties developers. The various TeX engines are not affected.
    
	* synctex_parser.c:
        - cosmetic changes to enhance code readability
        - Adding the notiong of mean line and weight to hbox nodes
          in order to enhance forward synchronization
        - function synctex_scanner_get_name:
            + Adding support for the new file naming convention with './'
    * synctex_parser_utils.c:
        - Adding support for the new file naming convention with './'
            + function synctex_ignore_leading_dot_slash_in_path replaces synctex_ignore_leading_dot_slash
            + function _synctex_is_equivalent_file_name is more permissive

    See the synctex_parser_readme.txt for more details

2011-08-25  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* synctex-e-rec.ch0: Shorten a change set to simplify e-pTeX.

2011-08-22  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* synctex-luatex.h, synctex-xetex.h: Define SYNCTEX_CURH and